IVYPORTAL-7960: Refactor Express according Serenity Theme - fixed alignment

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -2566,6 +2566,10 @@ a[id*=application-menu-item]>span.ui-menuitem-text {
   text-align: right;
 }
 
+.process-chain-mobile-container {
+  margin-right: 2rem;
+}
+
 /* Small screen */
 @media (max-width: 1024px) {
   .process-chain-container.vertical-process-chain-container {
@@ -2801,8 +2805,8 @@ a[id*=application-menu-item]>span.ui-menuitem-text {
 .line-process-chain .line-horizontal-process-step.hide-left-steps {
   width: 40px;
   height: 10px;
-  vertical-align: bottom;
-  margin: 0px 0px 4px 10px;
+  vertical-align: bottom !important;
+  margin: 0 0 4px 10px;
 }
 
 _:-ms-input-placeholder, :root .line-process-chain .line-horizontal-process-step.hide-left-steps {
